feat(search): flag to search empty bu in projects
Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>